# hello-setuptools

./: .gitignore  Pipfile  README.md  setup.cfg
greetpy/: __main__.py  goodnight.py  hello.py
tests/: test_goodnight.py  test_hello.py
