[metadata]
name = greetpy
version = 0.0.1
author = 1izard
description = Greet polite
long_description = file: README.md
license = MIT
classifires = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.7
packages = greetpy
include_package_data = true
zip_safe = false

[options.entry_points]
console_scripts =
    greetpy = greetpy.__main__:main